# fx2qspi

./: CMakeLists.txt  dscr.asm  fx2qspi.v  slave.c
cmake/: CMakeASM-SDASMInformation.cmake  CMakeDetermineASM-SDASMCompiler.cmake  CMakeTestASM-SDASMCompiler.cmake
fx2fw/: fw.c
